--- a/src/Components/Banner/Banner.css
+++ b/src/Components/Banner/Banner.css
@@ -1,8 +1,9 @@
 img {
     margin: 6rem 0 2rem 0;
-    width: 13rem;
+    width: 12rem;
     border-radius: 50%;
     border: 3px solid #4D392B;
+    box-shadow: 0 0 .5rem #4D392B, 0 0 .5rem currentColor;
 }
 
 h3 {
