--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,9 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: #f5d3ba;
+
+  
+  background: linear-gradient( to right,#f3be9b 20%, #f5d3ba,#f3be9b 20%);
 }
 
 code {
