--- a/src/Components/Banner/Banner.css
+++ b/src/Components/Banner/Banner.css
@@ -1,5 +1,5 @@
 img {
-    margin: 4rem 0 2rem 0;
+    margin: 4rem 0 1rem 0;
     width: 12rem;
     border-radius: 50%;
     border: 3px solid #4D392B;
@@ -8,4 +8,12 @@ img {
 
 h3 {
     color: #2c231c;
+}
+
+.navegacao {
+    gap: 30px;
+    margin-top: .5rem;
+    margin-bottom: -2rem;
+    font-size: 18px;
+
 }
